Update AUTH_URL to Auth server

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ DB_PORT=5432
 DB_NAME=fixermate
 DB_USER=wave
 DB_PASSWORD=techwave
-AUTH_URL=http://localhost:3030/api
+AUTH_URL=http://auth-manager-backend:3030/api
 ROOT_PASSWORD="TEcVaJt13[/1]"
